--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "author": "zaadevofc",
   "license": "MIT",
   "files": [
     "lib/*",
     "WAProto/*",
     "engine-requirements.js"
   ],
+  "repository": {
+    "url": "https://github.com/zeative/libproto"
+  },
   "scripts": {
     "build": "rolldown -c",
     "r:patch": "npm run build && npm version patch && npm publish --access public",
@@ -19,7 +23,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@cacheable/node-cache": "^1.4.0",
     "@hapi/boom": "^9.1.3",
-    "@zaadevofc/libsignal": "^1.0.5",
+    "@zaadevofc/libsignal": "^1.0.8",
     "async-mutex": "^0.5.0",
     "axios": "^1.6.0",
     "cache-manager": "^5.7.6",
